[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/info.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Draw_lines.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Quadratic Bezier.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Scripts/ColorRect.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Cubic Bezier.gd" type="Script" id=6]
[ext_resource path="res://Scripts/PathFollow2D.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Curve3D.gd" type="Script" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 10.5886, 49.685, -10.5886, -49.685, 40.0467, 353.941, -74.9347, -56.2011, 74.9347, 56.2011, 254.262, 365.344, -4.88705, -55.3866, 4.88705, 55.3866, 350.374, 454.126, 0.814508, -61.0881, -0.814508, 61.0881, 170.368, 506.254, -52.943, 3.25803, 52.943, -3.25803, 337.342, 567.342, 2.44352, 42.3544, -2.44352, -42.3544, 471.736, 411.771, 43.9834, -18.7337, -43.9834, 18.7337, 413.091, 331.135 )
}

[sub_resource type="Curve3D" id=2]
_data = {
"points": PoolVector3Array( 0.485962, -0.714355, 2.09241, -0.485962, 0.714355, -2.09241, -2.34338, -0.63208, -0.413574, 0.199585, 0.622437, -0.500122, -0.199585, -0.622437, 0.500122, -0.984741, 2.47644, -0.655029, -0.44873, -0.734619, 0.133179, 0.44873, 0.734619, -0.133179, 0.532959, 3.12378, 1.58215, 0.584473, 0.305664, 0.779297, -0.584473, -0.305664, -0.779297, 1.05444, 2.2312, 3.99341, 0.378662, -0.518555, 1.53406, -0.378662, 0.518555, -1.53406, -0.703125, 0.372803, 3.03491, -0.144165, -1.20752, 1.44556, 0.144165, 1.20752, -1.44556, -2.34338, -0.63208, -0.413574 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="CylinderMesh" id=3]

[node name="Node" type="Node"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI"]
editor/display_folded = true
modulate = Color( 0.172549, 1, 0, 1 )
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Label" type="Label" parent="UI/Panel"]
anchor_right = 1.0
margin_bottom = 14.0
text = "Quadratic Bezier"
align = 1

[node name="Label2" type="Label" parent="UI/Panel"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -7.0
margin_right = 256.0
margin_bottom = 7.0
text = "(you can drag the points)"
align = 1

[node name="info" type="Label" parent="UI/Panel"]
anchor_bottom = 1.0
margin_top = 15.0
margin_right = 107.0
text = "p1_pos:
p2_pos:
p3_pos:
t: 
r: "
script = ExtResource( 1 )

[node name="CheckBox" type="CheckBox" parent="UI/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 24.0
text = "hide points"

[node name="Panel2" type="Panel" parent="UI"]
modulate = Color( 0, 0.576471, 1, 1 )
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="Label2" type="Label" parent="UI/Panel2"]
anchor_right = 1.0
margin_bottom = 14.0
text = "Cubic Bezier"
align = 1

[node name="Label3" type="Label" parent="UI/Panel2"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -7.0
margin_right = 256.0
margin_bottom = 7.0
text = "(you can drag the points)"
align = 1

[node name="info2" type="Label" parent="UI/Panel2"]
anchor_bottom = 1.0
margin_top = 15.0
margin_right = 49.0
text = "p1_pos:
p2_pos:
p3_pos:
t: 
r: "
script = ExtResource( 1 )

[node name="CheckBox2" type="CheckBox" parent="UI/Panel2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 24.0
text = "hide points"

[node name="Panel3" type="Panel" parent="UI"]
editor/display_folded = true
modulate = Color( 0.945098, 1, 0, 1 )
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Label3" type="Label" parent="UI/Panel3"]
anchor_right = 1.0
margin_bottom = 14.0
text = "Curve2D"
align = 1

[node name="HSlider" type="HSlider" parent="UI/Panel3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -152.0
margin_top = 18.0
margin_right = -14.0
margin_bottom = 34.0
min_value = 5.0
value = 50.0

[node name="Label" type="Label" parent="UI/Panel3/HSlider"]
margin_left = 46.0
margin_top = -16.0
margin_right = 86.0
margin_bottom = -2.0
text = "speed"

[node name="Panel4" type="Panel" parent="UI"]
editor/display_folded = true
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label4" type="Label" parent="UI/Panel4"]
anchor_right = 1.0
margin_bottom = 14.0
text = "Curve3D"
align = 1

[node name="HSlider2" type="HSlider" parent="UI/Panel4"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -154.0
margin_top = 20.0
margin_right = -16.0
margin_bottom = 36.0
min_value = 5.0
value = 50.0

[node name="Label" type="Label" parent="UI/Panel4/HSlider2"]
margin_left = 46.0
margin_top = -16.0
margin_right = 86.0
margin_bottom = -2.0
text = "speed"

[node name="Draw_lines_1" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
bezier = NodePath("../../Quadratic Bezier")

[node name="Draw_lines_2" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
bezier = NodePath("../../Cubic Bezier")

[node name="Quadratic Bezier" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="Sprite1" type="Sprite" parent="Quadratic Bezier"]
position = Vector2( 102, 192 )
texture = ExtResource( 4 )

[node name="P0" type="Position2D" parent="Quadratic Bezier"]
editor/display_folded = true
position = Vector2( 102, 192 )

[node name="ColorRect" type="ColorRect" parent="Quadratic Bezier/P0"]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )
mouse_default_cursor_shape = 13
color = Color( 1, 0, 0, 1 )
script = ExtResource( 5 )
panel_path = NodePath("../../../UI/Panel")

[node name="Label" type="Label" parent="Quadratic Bezier/P0/ColorRect"]
modulate = Color( 0, 1, 0.0862745, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
text = "P1"
align = 1
valign = 1
uppercase = true

[node name="P1" type="Position2D" parent="Quadratic Bezier"]
editor/display_folded = true
position = Vector2( 242.415, 29.46 )

[node name="ColorRect" type="ColorRect" parent="Quadratic Bezier/P1"]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )
mouse_default_cursor_shape = 13
color = Color( 1, 0, 0, 1 )
script = ExtResource( 5 )
panel_path = NodePath("../../../UI/Panel")

[node name="Label2" type="Label" parent="Quadratic Bezier/P1/ColorRect"]
modulate = Color( 0, 1, 0.0862745, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
text = "P2"
align = 1
valign = 1
uppercase = true

[node name="P2" type="Position2D" parent="Quadratic Bezier"]
editor/display_folded = true
position = Vector2( 401, 193 )

[node name="ColorRect" type="ColorRect" parent="Quadratic Bezier/P2"]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )
mouse_default_cursor_shape = 13
color = Color( 1, 0, 0, 1 )
script = ExtResource( 5 )
panel_path = NodePath("../../../UI/Panel")

[node name="Label3" type="Label" parent="Quadratic Bezier/P2/ColorRect"]
modulate = Color( 0, 1, 0.0862745, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
text = "P3"
align = 1
valign = 1
uppercase = true

[node name="Cubic Bezier" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Cubic Bezier"]
position = Vector2( 567.501, 261.35 )
texture = ExtResource( 4 )

[node name="P0" type="Position2D" parent="Cubic Bezier"]
editor/display_folded = true
position = Vector2( 579.851, 200.55 )

[node name="ColorRect" type="ColorRect" parent="Cubic Bezier/P0"]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )
mouse_default_cursor_shape = 13
color = Color( 1, 0, 0, 1 )
script = ExtResource( 5 )
panel_path = NodePath("../../../UI/Panel2")

[node name="Label" type="Label" parent="Cubic Bezier/P0/ColorRect"]
modulate = Color( 0, 1, 0.0862745, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
text = "P1"
align = 1
valign = 1
uppercase = true

[node name="P1" type="Position2D" parent="Cubic Bezier"]
editor/display_folded = true
position = Vector2( 614.051, 79.8997 )

[node name="ColorRect" type="ColorRect" parent="Cubic Bezier/P1"]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )
mouse_default_cursor_shape = 13
color = Color( 1, 0, 0, 1 )
script = ExtResource( 5 )
panel_path = NodePath("../../../UI/Panel2")

[node name="Label" type="Label" parent="Cubic Bezier/P1/ColorRect"]
modulate = Color( 0, 1, 0.0862745, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
text = "P2"
align = 1
valign = 1
uppercase = true

[node name="P2" type="Position2D" parent="Cubic Bezier"]
editor/display_folded = true
position = Vector2( 857.252, 88.4497 )

[node name="ColorRect" type="ColorRect" parent="Cubic Bezier/P2"]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )
mouse_default_cursor_shape = 13
color = Color( 1, 0, 0, 1 )
script = ExtResource( 5 )
panel_path = NodePath("../../../UI/Panel2")

[node name="Label" type="Label" parent="Cubic Bezier/P2/ColorRect"]
modulate = Color( 0, 1, 0.0862745, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
text = "P3"
align = 1
valign = 1
uppercase = true

[node name="P3" type="Position2D" parent="Cubic Bezier"]
editor/display_folded = true
position = Vector2( 912.352, 212.9 )

[node name="ColorRect" type="ColorRect" parent="Cubic Bezier/P3"]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 10, 10 )
mouse_default_cursor_shape = 13
color = Color( 1, 0, 0, 1 )
script = ExtResource( 5 )
panel_path = NodePath("../../../UI/Panel2")

[node name="Label" type="Label" parent="Cubic Bezier/P3/ColorRect"]
modulate = Color( 0, 1, 0.0862745, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
text = "P4"
align = 1
valign = 1
uppercase = true

[node name="Curve2D" type="Node" parent="."]
editor/display_folded = true

[node name="Path2D" type="Path2D" parent="Curve2D"]
position = Vector2( 0, 13.8466 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Curve2D/Path2D"]
position = Vector2( 40.0467, 353.941 )
rotation = -1.69686
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Curve2D/Path2D/PathFollow2D"]
texture = ExtResource( 4 )

[node name="Curve3D" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Curve3D"]
position = Vector2( 768, 470 )

[node name="Viewport" type="Viewport" parent="Curve3D"]
size = Vector2( 525, 325 )

[node name="Camera" type="Camera" parent="Curve3D/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.570846, -4.76837e-007, 5.77769 )
current = true

[node name="Path" type="Path" parent="Curve3D/Viewport"]
transform = Transform( 0.682508, 0, 0.730878, 0, 1, 0, -0.730878, 0, 0.682508, 0.654297, 0, 0 )
curve = SubResource( 2 )

[node name="PathFollow" type="PathFollow" parent="Curve3D/Viewport/Path"]
transform = Transform( -0.563543, -0.728832, -0.388867, -0.687364, 0.674809, -0.268623, 0.458194, 0.115914, -0.881254, -2.15356, -0.875307, 0.621644 )
offset = 36.1
rotation_mode = 4

[node name="MeshInstance" type="MeshInstance" parent="Curve3D/Viewport/Path/PathFollow"]
transform = Transform( 0.18581, 0.0388547, -0.0629692, -0.0594868, -0.0227737, -0.189586, -0.0440017, 0.194863, -0.00960101, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null
[connection signal="toggled" from="UI/Panel/CheckBox" to="Quadratic Bezier" method="_on_CheckBox_toggled"]
[connection signal="toggled" from="UI/Panel2/CheckBox2" to="Cubic Bezier" method="_on_CheckBox2_toggled"]
[connection signal="value_changed" from="UI/Panel3/HSlider" to="Curve2D/Path2D/PathFollow2D" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="UI/Panel4/HSlider2" to="Curve3D" method="_on_HSlider2_value_changed"]
[connection signal="mouse_entered" from="Quadratic Bezier/P0/ColorRect" to="Quadratic Bezier/P0/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="Quadratic Bezier/P0/ColorRect" to="Quadratic Bezier/P0/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="point_dragged" from="Quadratic Bezier/P0/ColorRect" to="UI/Draw_lines_1" method="_on_ColorRect_point_dragged"]
[connection signal="mouse_entered" from="Quadratic Bezier/P1/ColorRect" to="Quadratic Bezier/P1/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="Quadratic Bezier/P1/ColorRect" to="Quadratic Bezier/P1/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="point_dragged" from="Quadratic Bezier/P1/ColorRect" to="UI/Draw_lines_1" method="_on_ColorRect_point_dragged"]
[connection signal="mouse_entered" from="Quadratic Bezier/P2/ColorRect" to="Quadratic Bezier/P2/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="Quadratic Bezier/P2/ColorRect" to="Quadratic Bezier/P2/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="point_dragged" from="Quadratic Bezier/P2/ColorRect" to="UI/Draw_lines_1" method="_on_ColorRect_point_dragged"]
[connection signal="mouse_entered" from="Cubic Bezier/P0/ColorRect" to="Cubic Bezier/P0/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="Cubic Bezier/P0/ColorRect" to="Cubic Bezier/P0/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="point_dragged" from="Cubic Bezier/P0/ColorRect" to="UI/Draw_lines_2" method="_on_ColorRect_point_dragged"]
[connection signal="mouse_entered" from="Cubic Bezier/P1/ColorRect" to="Cubic Bezier/P1/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="Cubic Bezier/P1/ColorRect" to="Cubic Bezier/P1/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="point_dragged" from="Cubic Bezier/P1/ColorRect" to="UI/Draw_lines_2" method="_on_ColorRect_point_dragged"]
[connection signal="mouse_entered" from="Cubic Bezier/P2/ColorRect" to="Cubic Bezier/P2/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="Cubic Bezier/P2/ColorRect" to="Cubic Bezier/P2/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="point_dragged" from="Cubic Bezier/P2/ColorRect" to="UI/Draw_lines_2" method="_on_ColorRect_point_dragged"]
[connection signal="mouse_entered" from="Cubic Bezier/P3/ColorRect" to="Cubic Bezier/P3/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="Cubic Bezier/P3/ColorRect" to="Cubic Bezier/P3/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="point_dragged" from="Cubic Bezier/P3/ColorRect" to="UI/Draw_lines_2" method="_on_ColorRect_point_dragged"]
